@@ -10,4 +10,6 @@ MANIFEST\.skip$
 MANIFEST\.bak$
 Makefile\.old$
 \.shipit$
+script/bootstrap.pl
+script/env
 
