@@ -9,6 +9,7 @@ This file documents the revision history for Perl extension Gitalist.
     - Update bootstrapping for local::lib 1.006000.
     - Fixed author_* barewords in Makefile.PL.
     - Handle merges in the diff view.
+    - Add script/{bootstrap.pl,env} to MANIFEST.SKIP.
 
 0.001008 2010-06-03
    - Add a requires_external_bin for the git command so we won't try running
